Revises options